# ProtoDB

./: .gitignore  CHANGELOG.md  CHANGES_CLOUD_STORAGE.md  CHANGES_GOOGLE_CLOUD_STORAGE.md  CHANGES_SUMMARY.md  Chat AI Evolución proto 2025-08-02.txt  Common.py  Estrategia_de_seguridad.md  Exceptions.py  LICENSE  MANIFEST.in  PYPI_UPLOAD.md  README.md  STORAGE_FORMAT_CHANGES.md  SharedFileStorage.py  TransactionalStorage.py  benchmark_results.json  commercial_positioning.md  conftest.py  future_vision.md  memory_medium_insert_results.json  memory_medium_read_results.json  memory_medium_update_results.json  memory_small_results.json  next_steps_proposal.md  pyproject.toml  requirements.txt  run_tests.py  test_coverage_improvements.md  test_install.py
cloud_page_cache/server_test-server/: cache_mappings.json
docs/: BUILDING.md  README.md  adr_work_stealing.md  performance.md
docs/source/: advanced_usage.rst  architecture.rst  concepts.md  conf.py  cookbook.md  cookbook_traverse.rst  development.rst  examples.rst  index.rst  installation.rst  introduction.rst  parallel_scans.rst  quickstart.rst  root_locking.rst
docs/source/api/: atom_cache.rst  core.rst  exceptions.rst  fsm.rst  index.rst  linq.rst  parallel.rst  queries.rst  storage.rst  vectors.rst
examples/: README.md  benchmark_results.json  benchmark_results_indexed.json  benchmark_results_indexed_100k.json  benchmark_results_indexed_win200.json  benchmark_results_linq.json  benchmark_results_vectors.json  collection_indexing_example.py  comprehensive_benchmark.py  db_performance_benchmark.py  indexed_benchmark.py  linq_basic.py  linq_between.py  linq_groupby.py  linq_performance.py  linq_policies.py  minimal_benchmark.py  performance_benchmark.py  simple_example.py  simple_performance_benchmark.py  task_manager.py  update_benchmark.py  vector_ann_benchmark.py
examples/examples/: benchmark_results_indexed.json
proto_base/: __init__.py  common.py  dictionaries.py  exceptions.py  file_block_provider.py  file_common.py  lists.py  memory_storage.py  object.py  object_storage.py  queries.py  sets.py  shared_file_storage.py  standalone_file_storage.py
proto_base/tests/: test_dictionaries.py  test_lists.py
proto_db/: __init__.py  arrow_bridge.py  atom_cache.py  cloud_cluster_file_storage.py  cloud_file_storage.py  cluster_file_storage.py  collection_improvements.md  common.py  db_access.py  dictionaries.py  exceptions.py  file_block_provider.py  fsm.py  fsm_improvements.md  hash_dictionaries.py  hybrid_executor.py  indexes.py  linq.py  lists.py  memory_storage.py  object_storage.py  parallel.py  queries.py  sets.py  standalone_file_storage.py  vector_index.py  vectors.py
proto_db/tests/: __init__.py  test_arrow_parquet.py  test_atom_cache.py  test_atom_cache_write_through.py  test_between_range.py  test_cloud_cluster_file_storage.py  test_cloud_cluster_file_storage_with_gcs.py  test_cloud_file_storage.py  test_cloud_file_storage_with_gcs.py  test_cluster_file_storage.py  test_collections_properties.py  test_concurrency.py  test_counted_set.py  test_db_access.py  test_db_access_with_standalone_file_storage.py  test_dbobject_recursion.py  test_dictionaries.py  test_example.py  test_expressions.py  test_file_block_provider.py  test_format_indicators.py  test_fsm.py  test_google_cloud_client.py  test_group_by_plan.py  test_hash_dictionaries.py  test_hash_dictionary.py  test_hybrid_executor.py  test_integration.py  test_ivf_flat_index.py  test_join_plan.py  test_linq_between.py  test_linq_groupby.py  test_linq_indexed_fastpath.py  test_linq_like.py  test_lists.py  test_memory_storage.py  test_new_query_features.py  test_parallel.py  test_queries.py  test_recursive_plan.py  (+7 more)
