[build-system]
requires = ["setuptools>=69", "wheel", "build"]
build-backend = "setuptools.build_meta"

[project]
name = "proto_db"
version = "0.1.0"
description = "Embedded, transactional, object‑oriented database for Python with index‑aware query planning and optional vector/Arrow support."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
authors = [
    { name = "ProtoBase Team", email = "contact@example.com" }
]
keywords = ["database", "embedded", "in-memory", "ACID", "indexes", "LINQ", "object database", "parquet", "arrow"]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Intended Audience :: Developers",
    "Topic :: Database",
    "Topic :: Software Development :: Libraries",
    "Operating System :: OS Independent",
]
dependencies = []

[project.optional-dependencies]
parquet = ["pyarrow>=14"]
vectors = ["numpy>=1.23", "scikit-learn>=1.1; python_version >= '3.11'"]
dev = ["pytest>=7", "build>=1.0", "twine>=4.0"]
docs = ["sphinx>=7", "jinja2>=3"]

[project.urls]
Homepage = "https://github.com/gamarino/ProtoBase"
Documentation = "https://github.com/gamarino/ProtoBase#readme"
Changelog = "https://github.com/gamarino/ProtoBase/blob/main/CHANGELOG.md"
Issues = "https://github.com/gamarino/ProtoBase/issues"

[tool.setuptools]

[tool.setuptools.packages.find]
include = ["proto_db*"]
exclude = ["examples*", "docs*", "benchmark_*", "cloud_page_cache*"]
