[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "proto_db"
version = "0.1.0"
description = "ProtoBase is an embedded, transactional, object-oriented database for Python."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
authors = [
    { name = "ProtoBase Team", email = "contact@example.com" }
]
keywords = ["database", "embedded", "transactional", "object-oriented", "ACID", "ORM-free", "NoSQL"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Database",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
  "six",
  "wrapt"
]

[project.optional-dependencies]
parquet = ["pyarrow"]
vectors = ["numpy", "hnswlib"]
dev = [
  "pytest",
  "hypothesis",
  "sphinx",
  "build",
  "twine"
]

[project.urls]
Homepage = "https://github.com/gamarino/ProtoBase"
"Bug Tracker" = "https://github.com/gamarino/ProtoBase/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["proto_db*"]
exclude = ["proto_db.tests*"]
